--- a/main.html
+++ b/main.html
@@ -7,7 +7,26 @@
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
+
+
+
+	 <!-- Article with three paragraphs -->
+  <article>
+    <p>First paragraph</p>
+    <p>Second paragraph</p>
+    <p>Third paragraph</p>
+  </article>
+
+  <!-- Unordered list with 5 items -->
+  <ul>
+    <li>List item 1</li>
+    <li>List item 2</li>
+    <li>List item 3</li>
+    <li>List item 4</li>
+    <li>List item 5</li>
+  </ul>
+
+	
     <script type="text/javascript" src="./script.js">
 </script>
 
